# roblox-enhanced-menu

./: CMakeLists.txt  README.md
examples/: quick_start.lua
lua/: README_LUA.md  bloxfruit.lua  executor.lua  menu.lua
src/: imgui_setup.cpp  imgui_setup.h  main.cpp  menu.cpp  menu.h  optimization.cpp  optimization.h  performance_monitor.cpp  performance_monitor.h  themes.cpp  themes.h
